package org.example.strategy.solution;

public interface Compressor {
//    byte[] compress(byte[] image);

    void compress(String fileName);
}
