package org.example.strategy.solution;

public interface Filter {
    void apply(String fileName);
}
